# bwtool

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  aggregate.c  bwtool.c  bwtool.h  bwtool_shared.c  bwtool_shared.h  chromgraph.c  config.h.in  configure  configure.ac  distrib.c  extract.c  fill.c  find.c  libtool  lift.c  local.mk  matrix.c  paste.c  rand.c  remove.c  roll.c  sax.c  shift.c  split.c  summarize.c  window.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
bwtool/: Makefile.am  Makefile.in  aggregate.c  bwtool.c  bwtool.h  bwtool_shared.c  bwtool_shared.h  chromgraph.c  distance.c  distrib.c  extract.c  fill.c  find.c  lift.c  makefile  matrix.c  paste.c  rand.c  remove.c  roll.c  sax.c  shift.c  split.c  summarize.c  window.c
bwtool/tests/: Makefile.am  Makefile.in  bwmake.c  chrom.sizes  core-test.sh  ex1.bed3  ex1.bed6  readme.txt  summarize.bed3  summarize.bed9  test.sh  wigmake.c
bwtool/tests/answers/: aggregate_2_and_2.txt  aggregate_main.wig_agg1.bed.3.txt  chromgraph_main_every_5.cg  distribution_main_basic.txt  fill_main.bw_zero.wig  matrix_two_wigs.1.txt  matrix_two_wigs.3.txt  matrix_two_wigs.4.txt  paste_main.bw_second.bw.1.txt  paste_main.bw_second.bw.3.txt  remove_main.bw_agg1.bed.wig  sax_main_4.2.bed  sax_main_4.fa  shift_main.bw_+3.wig  summary_main_every3.txt  window_main_4_center.txt  window_main_4_center_skip.txt
bwtool/tests/beds/: agg1.bed  agg2.bed  find_max_1.bed  r0.bed  r3.bed  r3p.bed  yellow.bed
bwtool/tests/misc/: to_new_transposon_and_gap.chain
bwtool/tests/scripts/: aggregate_main.wig_agg1.bed.1.sh  aggregate_main.wig_agg1.bed.3.sh  distribution_main_basic.sh  extract_main_agg1.sh  find_main.bw_morethan4.sh  find_main_extrema.1.sh  find_main_extrema.2.sh  matrix_two_wigs.2.sh  matrix_two_wigs.3.sh  matrix_two_wigs.4.sh  paste_main.bw_second.bw.3.sh  paste_main.bw_second.bw.sh  remove_main_less3.sh  shift_main.bw_-2.sh  summary_main_every10_fillzero_wsum.sh  summary_main_every3.sh
bwtool/tests/wigs/: main-alt.wig  main.sizes
bwtool/wigToBigWig/: Makefile.am  Makefile.in
include/: bigs.h  metaBig.h  metaBigBam.h  r_stuff.h  random_coord.h  zwriting.h
lib/: Makefile.am  Makefile.in  bigs.c  bigs.h  cluster.c  cluster.h  extrema.c  extrema.h  fastq_stuff.c  fastq_stuff.h  favs.c  favs.h  makefile  metaBig.c  metaBig.h  metaBigBam.c  mt19937-64.c  random_coord.c  random_coord.h  sax.c  sax.h  stuff.c  stuff.h
libjkweb/: Makefile.am  Makefile.in  aliType.c  annoAssembly.c  annoFilter.c  annoFormatTab.c  annoFormatter.c  annoGrateWig.c  annoGrator.c  annoGratorQuery.c  annoOption.c  annoRow.c  annoStreamBigBed.c  annoStreamBigWig.c  annoStreamTab.c  annoStreamVcf.c  annoStreamer.c  apacheLog.c  asParse.c  axt.c  axtAffine.c  bPlusTree.c  bamFile.c  base64.c  basicBed.c  bbiRead.c  bbiWrite.c  bigBed.c  binRange.c  bits.c  blastOut.c  blastParse.c  boxClump.c  boxLump.c  bwgCreate.c  bwgQuery.c  bwgValsOnChrom.c  cda.c  chain.c  chainBlock.c  (+169 more)
tests/: Makefile.am  Makefile.in  bwmake.c  core-test.sh  wigmake.c
tests/answers/: aggregate_main.wig_agg1.bed.1.txt  aggregate_main.wig_agg1.bed.2.txt  extract_main_agg1.bed  find_main.bw_morethan4.bed  find_main_extrema.1.bed  find_main_extrema.2.bed  find_max_1.ans1.bed  find_max_1.ans2.bed  lift_main_inversion.1.wig  lift_main_inversion.2.txt  lift_to_new_main.wig  matrix_two_wigs.2.txt  paste_main.bw_second.bw.2.txt  remove_main_less3.wig  sax_main_8.fa  shift_main.bw_-2.wig  summary_main_every10_fillzero_wsum.txt  window_main_4.txt  window_main_4_center_fill0.txt
tests/scripts/: aggregate_2_and_2.sh  aggregate_main.wig_agg1.bed.2.sh  chromgraph_main_every_5.sh  fill_main.bw_zero.sh  find_max_1.1.sh  find_max_1.2.sh  lift_main_inversion.1.sh  lift_main_inversion.2.sh  lift_to_new_main.sh  matrix_two_wigs.1.sh  paste_main.bw_second.bw.2.sh  remove_main.bw_agg1.bed.sh  sax_main_4.2.sh  sax_main_4.sh  sax_main_8.sh  shift_main.bw_+3.sh  window_main_4.sh  window_main_4_center.sh  window_main_4_center_fill0.sh  window_main_4_center_skip.sh
tests/wigs/: main.wig  second.wig
