bin_PROGRAMS = bwtool
bwtool_SOURCES = \
	aggregate.c \
	bwtool.c \
	bwtool.h \
	bwtool_shared.c \
	bwtool_shared.h \
	chromgraph.c \
	distrib.c \
	extract.c \
	fill.c \
	find.c \
	lift.c \
	matrix.c \
	paste.c \
	rand.c \
	remove.c \
	roll.c \
	sax.c \
	shift.c \
	split.c \
	summarize.c \
	window.c

SUBDIRS = tests
