bin_PROGRAMS = bwtool
bwtool_CFLAGS = -I$(top_srcdir)/libjkweb -I$(top_srcdir)/lib
bwtool_LDADD =  ../lib/libbeato.a ../libjkweb/libjkweb.a
bwtool_SOURCES = \
	aggregate.c \
	bwtool.c \
	bwtool.h \
	chromgraph.c \
	distrib.c \
	fill.c \
	find.c \
	lift.c \
	matrix.c \
	paste.c \
	rand.c \
	remove.c \
	sax.c \
	shift.c \
	summarize.c
