bin_PROGRAMS = bwtool
bwtool_CFLAGS = -I$(top_srcdir)/libjkweb -I$(top_srcdir)/lib
bwtool_LDADD = $(top_srcdir)/lib/libbeato.a $(top_srcdir)/libjkweb/libjkweb.a
bwtool_SOURCES = \
	aggregate.c \
	bwtool.c \
	bwtool.h \
	bwtool_shared.c \
	bwtool_shared.h \
	chromgraph.c \
	distrib.c \
	fill.c \
	find.c \
	lift.c \
	matrix.c \
	paste.c \
	rand.c \
	remove.c \
	sax.c \
	shift.c \
	split.c \
	summarize.c \
	window.c
