AM_CFLAGS = @MACHTYPE_WARN@ -fno-strict-aliasing

noinst_LIBRARIES = libbeato.a

libbeato_a_CFLAGS = -I$(top_srcdir)/libjkweb
libbeato_a_SOURCES = \
	bigs.c \
	bigs.h \
	cluster.c \
	cluster.h \
	extrema.c \
	extrema.h \
	fastq_stuff.c \
	fastq_stuff.h \
	favs.c \
	favs.h \
	metaBig.c \
	metaBig.h \
	metaBigBam.c \
	metaBigBam.h \
	mt19937-64.c \
	mt64.h \
	r_stuff.h \
	random_coord.c \
	random_coord.h \
	sax.c \
	sax.h \
	stuff.c \
	stuff.h \
	zwriting.h
