AM_CFLAGS = @MACHTYPE_WARN@ -fno-strict-aliasing

noinst_LIBRARIES = libbeato.a

libbeato_a_CFLAGS = -I$(top_srcdir)/libjkweb
libbeato_a_SOURCES = \
	bigs.c \
	bigs.h \
	cluster.c \
	cluster.h \
	extrema.c \
	extrema.h \
	fastq_stuff.c \
	fastq_stuff.h \
	metaBig.c \
	metaBig.h \
	metaBigBam.c \
	metaBigBam.h \
	random_coord.c \
	random_coord.h \
	sax.c \
	sax.h \
	stuff.c \
	stuff.h
