# the library names to build (note we are building static libs only)

AM_CFLAGS = @MACHTYPE_WARN@ -fno-strict-aliasing

noinst_LIBRARIES = libjkweb.a
libjkweb_a_SOURCES = \
	ace.h \
	aliType.c \
	aliType.h \
	annoAssembly.c \
	annoAssembly.h \
	annoFilter.c \
	annoFilter.h \
	annoFormatTab.c \
	annoFormatTab.h \
	annoFormatter.c \
	annoFormatter.h \
	annoGrateWig.c \
	annoGrateWig.h \
	annoGrator.c \
	annoGrator.h \
	annoGratorQuery.c \
	annoGratorQuery.h \
	annoOption.c \
	annoOption.h \
	annoRow.c \
	annoRow.h \
	annoStreamBigBed.c \
	annoStreamBigBed.h \
	annoStreamBigWig.c \
	annoStreamBigWig.h \
	annoStreamTab.c \
	annoStreamTab.h \
	annoStreamVcf.c \
	annoStreamVcf.h \
	annoStreamer.c \
	annoStreamer.h \
	apacheLog.c \
	apacheLog.h \
	asParse.c \
	asParse.h \
	axt.c \
	axt.h \
	axtAffine.c \
	bPlusTree.c \
	bPlusTree.h \
	bamFile.c \
	bamFile.h \
	bandExt.h \
	base64.c \
	base64.h \
	basicBed.c \
	basicBed.h \
	bbiFile.h \
	bbiRead.c \
	bbiWrite.c \
	bigBed.c \
	bigBed.h \
	bigWig.h \
	binRange.c \
	binRange.h \
	bits.c \
	bits.h \
	blastOut.c \
	blastParse.c \
	blastParse.h \
	boxClump.c \
	boxClump.h \
	boxLump.c \
	boxLump.h \
	bwgCreate.c \
	bwgInternal.h \
	bwgQuery.c \
	bwgValsOnChrom.c \
	cda.c \
	cda.h \
	chain.c \
	chain.h \
	chainBlock.c \
	chainBlock.h \
	chainConnect.c \
	chainConnect.h \
	chainToAxt.c \
	chainToAxt.h \
	chainToPsl.c \
	chainToPsl.h \
	cheapcgi.c \
	cheapcgi.h \
	cirTree.c \
	cirTree.h \
	codebias.c \
	codebias.h \
	colHash.c \
	colHash.h \
	common.c \
	common.h \
	correlate.c \
	correlate.h \
	crTree.c \
	crTree.h \
	crudeali.h \
	dgRange.c \
	diGraph.c \
	diGraph.h \
	dlist.c \
	dlist.h \
	dnaLoad.c \
	dnaLoad.h \
	dnaMarkov.c \
	dnaMarkov.h \
	dnaMotif.c \
	dnaMotif.h \
	dnaseq.c \
	dnaseq.h \
	dnautil.c \
	dnautil.h \
	dtdParse.c \
	dtdParse.h \
	dyOut.c \
	dyOut.h \
	dystring.c \
	dystring.h \
	elmTree.c \
	elmTree.h \
	emblParse.c \
	emblParse.h \
	ens.h \
	errCatch.c \
	errCatch.h \
	errabort.c \
	errabort.h \
	fa.c \
	fa.h \
	ffAli.c \
	ffScore.c \
	fieldedTable.c \
	fieldedTable.h \
	filePath.c \
	filePath.h \
	fixColor.c \
	flydna.c \
	flydna.h \
	fof.c \
	fof.h \
	fuzzyFind.h \
	fuzzyShow.c \
	gapCalc.c \
	gapCalc.h \
	gdf.c \
	gdf.h \
	gemfont.c \
	gemfont.h \
	genoFind.h \
	genomeRangeTree.c \
	genomeRangeTree.h \
	gfClientLib.h \
	gfNet.c \
	gfPcrLib.h \
	gfWebLib.h \
	gff.c \
	gff.h \
	gff3.c \
	gff3.h \
	gfxPoly.c \
	gfxPoly.h \
	gifLabel.c \
	gifLabel.h \
	gifcodes.h \
	gifcomp.c \
	gifdecomp.c \
	gifread.c \
	gifwrite.c \
	hacTree.c \
	hacTree.h \
	hash.c \
	hash.h \
	hex.c \
	hex.h \
	hgGene.h \
	hgap.h \
	hgdb.h \
	histogram.c \
	histogram.h \
	hmmPfamParse.c \
	hmmPfamParse.h \
	hmmstats.c \
	hmmstats.h \
	htmlPage.c \
	htmlPage.h \
	htmshell.c \
	htmshell.h \
	https.c \
	https.h \
	intExp.c \
	intValTree.c \
	intValTree.h \
	internet.c \
	internet.h \
	itsa.c \
	itsa.h \
	iupac.c \
	iupac.h \
	jointalign.c \
	jointalign.h \
	jpegSize.c \
	jpegSize.h \
	keys.c \
	keys.h \
	knetUdc.c \
	knetUdc.h \
	kxTok.c \
	kxTok.h \
	lineFileOnBigBed.c \
	linefile.c \
	linefile.h \
	localmem.c \
	localmem.h \
	log.c \
	log.h \
	maDbRep.h \
	maToFf.h \
	maf.c \
	maf.h \
	mafFromAxt.c \
	mafScore.c \
	mailViaPipe.c \
	mailViaPipe.h \
	md5.c \
	md5.h \
	memalloc.c \
	memalloc.h \
	memgfx.c \
	memgfx.h \
	meta.c \
	meta.h \
	metaWig.c \
	metaWig.h \
	mgCircle.c \
	mgPolygon.c \
	mime.c \
	mime.h \
	net.c \
	net.h \
	nib.c \
	nib.h \
	nibTwo.c \
	nibTwo.h \
	nt4.c \
	nt4.h \
	numObscure.c \
	obscure.c \
	obscure.h \
	oldGff.c \
	oldGff.h \
	oligoTm.c \
	oligoTm.h \
	ooc.h \
	options.c \
	options.h \
	osunix.c \
	pairHmm.c \
	pairHmm.h \
	paraFetch.c \
	paraFetch.h \
	patSpace.h \
	peakCluster.c \
	peakCluster.h \
	phyloTree.c \
	phyloTree.h \
	pipeline.c \
	pipeline.h \
	pngwrite.c \
	portable.h \
	portimpl.c \
	portimpl.h \
	psGfx.c \
	psGfx.h \
	psPoly.c \
	psPoly.h \
	pscmGfx.c \
	pscmGfx.h \
	psl.c \
	psl.h \
	pslGenoShow.c \
	pslShow.c \
	pslTbl.c \
	pslTbl.h \
	pslTransMap.c \
	pslTransMap.h \
	pthreadWrap.c \
	pthreadWrap.h \
	qa.c \
	qa.h \
	quickHeap.c \
	quickHeap.h \
	quotedP.c \
	quotedP.h \
	ra.c \
	ra.h \
	rainbow.c \
	rainbow.h \
	rangeTree.c \
	rangeTree.h \
	raToStruct.c \
	raToStruct.h \
	rbTree.c \
	rbTree.h \
	regexHelper.c \
	regexHelper.h \
	repMask.c \
	repMask.h \
	rle.c \
	rle.h \
	rnautil.c \
	rnautil.h \
	rql.h \
	rqlEval.c \
	rqlParse.c \
	rudp.c \
	rudp.h \
	scoreWindow.c \
	scoreWindow.h \
	seg.c \
	seg.h \
	seqOut.c \
	seqOut.h \
	seqStats.c \
	seqStats.h \
	servBrcMcw.c \
	servCrunx.c \
	servcis.c \
	servcl.c \
	servmsII.c \
	servpws.c \
	shaRes.c \
	shaRes.h \
	sig.h \
	slog.c \
	slog.h \
	snof.c \
	snof.h \
	snofmake.c \
	snofmake.h \
	snofsig.c \
	spaceSaver.c \
	spaceSaver.h \
	spacedColumn.c \
	spacedColumn.h \
	spacedSeed.c \
	spacedSeed.h \
	splatAli.c \
	splatAli.h \
	splix.h \
	sqlList.c \
	sqlList.h \
	sqlNum.c \
	sqlNum.h \
	subText.c \
	subText.h \
	sufa.c \
	sufa.h \
	sufx.c \
	sufx.h \
	supStitch.h \
	synQueue.c \
	synQueue.h \
	tabRow.c \
	tabRow.h \
	textOut.c \
	textOut.h \
	tokenizer.c \
	tokenizer.h \
	trans3.h \
	trix.c \
	trix.h \
	twoBit.c \
	twoBit.h \
	udc.c \
	udc.h \
	unfin.h \
	vGfx.c \
	vGfx.h \
	vGfxPrivate.h \
	vGif.c \
	vPng.c \
	vcf.c \
	vcf.h \
	vcfBits.c \
	vcfBits.h \
	verbose.c \
	verbose.h \
	wildcmp.c \
	wormdna.c \
	wormdna.h \
	xAli.c \
	xAli.h \
	xa.c \
	xa.h \
	xap.c \
	xap.h \
	xenalign.h \
	xenshow.c \
	xmlEscape.c \
	xmlEscape.h \
	xp.c \
	xp.h \
	zlibFace.c \
	zlibFace.h

EXTRA_DIST = \
	common.pss \
	dnaMotif.pss
