check_PROGRAMS = bwmake wigmake
bwmake_SOURCES = bwmake.c
wigmake_SOURCES = wigmake.c
TESTS = \
	scripts/aggregate_main.wig_agg1.bed.1.sh \
	scripts/aggregate_main.wig_agg1.bed.2.sh \
	scripts/aggregate_main.wig_agg1.bed.3.sh \
	scripts/aggregate_2_and_2.sh \
	scripts/chromgraph_main_every_5.sh \
	scripts/distribution_main_basic.sh \
	scripts/extract_main_agg1.sh \
	scripts/find_main_extrema.1.sh \
	scripts/find_main_extrema.2.sh \
	scripts/find_main.bw_morethan4.sh \
	scripts/find_max_1.1.sh \
	scripts/find_max_1.2.sh \
	scripts/fill_main.bw_zero.sh \
	scripts/lift_to_new_main.sh \
	scripts/lift_main_inversion.1.sh \
	scripts/lift_main_inversion.2.sh \
	scripts/matrix_two_wigs.1.sh \
	scripts/matrix_two_wigs.2.sh \
	scripts/matrix_two_wigs.3.sh \
	scripts/matrix_two_wigs.4.sh \
	scripts/paste_main.bw_second.bw.1.sh \
	scripts/paste_main.bw_second.bw.2.sh \
	scripts/paste_main.bw_second.bw.3.sh \
	scripts/remove_main.bw_agg1.bed.sh \
	scripts/remove_main_less3.sh \
	scripts/sax_main_4.sh \
	scripts/sax_main_4.2.sh \
	scripts/sax_main_8.sh \
	scripts/shift_main.bw_+3.sh \
	scripts/shift_main.bw_-2.sh \
	scripts/summary_main_every3.sh \
	scripts/summary_main_every10_fillzero_wsum.sh \
	scripts/window_main_4.sh \
	scripts/window_main_4_center.sh \
	scripts/window_main_4_center_fill0.sh \
	scripts/window_main_4_center_skip.sh
